--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,10 @@ dependencies:
   fluttertoast: ^8.2.8
   # Splash
   flutter_native_splash: ^2.4.1
+  # Responsive
+  flutter_screenutil: ^5.9.3
+  # SVG rendering
+  flutter_svg: ^2.0.10+1
 
 
 dev_dependencies:
