--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   # Code Generator mainly used with cubit & retrofit
   freezed: ^2.5.7
-  freezed_annotation: ^2.4.4
+  freezed_annotation: ^2.4.3
   # Dependency injection
   get_it: ^7.7.0
   # Auto. generate Code for converting to & from JSON by annotation
@@ -48,7 +48,7 @@ dependencies:
   # Networking
   dio: ^5.6.0
   retrofit: ^4.2.0
-  retrofit_generator: ^8.2.0
+  retrofit_generator: ^8.2.1
   pretty_dio_logger: ^1.4.0
   # Localization
   intl: ^0.19.0
@@ -67,6 +67,8 @@ dependencies:
   flutter_screenutil: ^5.9.3
   # SVG rendering
   flutter_svg: ^2.0.10+1
+  # A build system for Dart code generation and modular compilation
+  build_runner: ^2.4.12
 
 
 dev_dependencies:
